<resources>
    <string name="app_name">Lis-Health</string>
    <string name="ajustes">Ajustes</string>
    <string name="menu">Início</string>
    <string name="perfil">Perfil</string>
    <string name="registros">Registros</string>
    <string name="ol">Olá,</string>
    <string name="criar_novo_registro">Criar novo registro</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="n_o_possui_conta">Não possui conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="developer">CrAn</string>
    <string name="nome_completo">Nome completo</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="j_possui_conta">Já possui conta?</string>
    <string name="pressione_para_pedir_ajuda">Pressione para pedir ajuda</string>
    <string name="ltimo_registro">Último registro</string>
    <string name="nova_aplica_o">Nova aplicação</string>
    <string name="pr_xima_aplica_o">Próxima aplicação</string>


</resources>