<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".auth.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="163.81dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/loginEmail"
        android:layout_width="344dp"
        android:layout_height="65.52dp"
        android:layout_marginTop="48.19dp"
        android:layout_marginBottom="19.52dp"
        android:background="@drawable/button_new"
        android:backgroundTint="@color/bottom_nav"
        android:drawableStart="@drawable/email"
        android:drawablePadding="25dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/loginPassword"
        android:layout_width="344dp"
        android:layout_height="65.52dp"
        android:layout_marginTop="19.52dp"
        android:background="@drawable/button_new"
        android:backgroundTint="@color/bottom_nav"
        android:drawableStart="@drawable/password"
        android:drawableEnd="@drawable/visibility"
        android:drawablePadding="25dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14.43dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="@color/hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="344dp"
        android:layout_height="65.52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_new"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/n_o_possui_conta"
            android:textColor="@color/hint"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/redirectSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:padding="5dp"
            android:text="@string/cadastre_se"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:drawableStart="@drawable/copyright"
        android:drawablePadding="3dp"
        android:fontFamily="@font/poppins_light_italic"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>